# train-llm-from-scratch-mac

./: .gitignore  AGENTS.md  README.md  README_kskdmn.md  pyproject.toml  sft_rlhf_guide.ipynb
config/: config.py
scripts/: data_preprocess.py
scripts_mac/: print_h5_head.py
