[project]
name = "train-llm-from-scratch-mac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "h5py>=3.16.0",
    "numpy>=2.4.6",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbstripout>=0.9.1",
]
